[ios] Rotates Collections TableViewCell chevrons on RTL

Uses CGAffineTransformMakeRotation to do a 180 rotation of
the collection cells accessoryView whenever a chevron is
being used on RTL.

Bug: 869142
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ic10ebc0067e34a7fe8d593d4aafeb25dca4f9e99
Reviewed-on: https://chromium-review.googlesource.com/1162428
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580674}